# Winnerbot

./: .gitignore  auto_email.py  main.py  mycreds.txt  output.csv  pyproject.toml  score_update.py  scoreclass.py  scoretracker.csv  wintracker.csv
.github/workflows/: build-windows.yml
output/: Scores Week 1.csv  Scores Week 1.xlsx  Scores Week 2.xlsx  Scores Week 4.csv  Scores Week 4.xlsx  Scores Week 6.csv  Scores Week 6.xlsx  output.xlsx
src/: export_to_drive.py
